about and testimony edit

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Jasmine's profile page: About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>jz</span><span>mn</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -116,21 +116,21 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img class="img-responsive about-img" src="images/about.jpg" alt="html5 bootstrap template by colorlib.com">
+						<img class="img-responsive about-img" src="images/profile-1.jpg" alt="html5 bootstrap template by colorlib.com">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Noah</span><span>Henderson</span></h2>
+							<h2><span>Jasmine</span><span>Y-J Chen</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>Current Masters student of Information Systems at Northeastern University;<br>Software engineer with business background, and <br> <a href="#">activly searching for intern/co-op opportunities.</a></p>
 								<p class="colorlib-social-icons">
-									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
-									<a href="#"><i class="icon-googleplus"></i></a>
-									<a href="#"><i class="icon-dribbble2"></i></a>
+									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
+									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
+									<a href="https://github.com/JasmnC"><i class="icon-github"></i></a>
+									<a href="https://www.instagram.com/yuujadz/"><i class="icon-instagram"></i></a>
 								</p>
 								<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a></p>
 							</div>
@@ -139,13 +139,16 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 animate-box">
-						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+						<h3>EDUCATION</h3>
+						<p>Northeastern University, Boston, MA<br>Master of Science in Information Systems<br><br>National Taipei University, Taiwan<br>BBA in Finance and Cooperative Management<br></p>
 					</div>
 					<div class="col-md-4 animate-box">
-						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+						<h3>INTERNSHIP</h3>
+						<p>Marvell Technology Inc.<br>Software/Firmware Engineer<br>-used embedded software and linux machine to run scripts for firmware testing</p>
 					</div>
 					<div class="col-md-4 animate-box">
-						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+						<h3>EXTRA CURRICULAR</h3>
+						<p>Husky Syster Code<br>Event coordinator<br>-hold monthly workshops and events to connect female programmers<br></p>
 					</div>
 				</div>
 			</div>
