--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
@@ -319,12 +319,12 @@
 		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Blog</h2>
+					<h2 class="bold">Gallery</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Blog</span>
-						<h2>Read Our Case</h2>
+						<span>Gallery</span>
+						<h2>Yes, I do shooting for fun</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -398,12 +398,12 @@
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Testimonies</h2>
+					<h2 class="bold">Endourses</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Testimonies</span>
-						<h2>Clients Says</h2>
+						<span>Endoursements</span>
+						<h2>They Said</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -419,8 +419,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-										<span>" &mdash; George Brooks</span>
+										<p>"I'm your best friend."</p>
+										<span> &mdash; Philips Yao</span>
 									</blockquote>
 								</div>
 							</div>
@@ -429,8 +429,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-										<span>" &mdash; Daniel Foster</span>
+										<p>"Jasmine has a clear personality, she overcome the difficulties and she's definatly a go-getter."</p>
+										<span> &mdash; Josie my co-op advisor</span>
 									</blockquote>
 								</div>
 							</div>
@@ -439,8 +439,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
-										<span>" &mdash; Liam Jenkins</span>
+										<p>"I will still love you."</p>
+										<span> &mdash; mom</span>
 									</blockquote>
 								</div>
 							</div>
@@ -456,51 +456,19 @@
 					<div class="row">
 						<div class="col-md-4 col-pb-sm">
 							<div class="row">
-								<div class="col-md-10">
-									<h2>Let's Talk</h2>
-									<p>Chill, I won't bite.</p>
-									<p><a href="#">chen.jasm@northeastern.edu</a></p>
-									<p class="colorlib-social-icons">
-										<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
-										<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
-										<a href="https://github.com/JasmnC"><i class="icon-github"></i></a>
-										<a href="https://www.instagram.com/yuujadz/"><i class="icon-instagram"></i></a>
-										</p>
-								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-pb-sm">
-							<h2>Latest Blog</h2>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
-								<div class="desc">
-									<span>February 15, 2018</span>
-									<h3><a href="#">Art Gallery in Japan</a></h3>
-								</div>
-							</div>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-2.jpg);"></a>
-								<div class="desc">
-									<span>February 9, 2018</span>
-									<h3><a href="#">A Japanese Constellation</a></h3>
-								</div>
-							</div>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-3.jpg);"></a>
-								<div class="desc">
-									<span>February 15, 2018</span>
-									<h3><a href="#">Road Trip</a></h3>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
-							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
-							<div class="subscribe text-center">
-								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
-									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
-								</div>
+							<div class="col-md-10">
+								<h2>Chill, I won't bite.</h2>
+								<p>Feel free to find me at</p>
+								<p><a href="#">chen.jasm@northeastern.edu</a></p>
+								<p class="colorlib-social-icons">
+									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
+									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
+									<a href="https://github.com/JasmnC"><i class="icon-github"></i></a>
+									<a href="https://www.instagram.com/yuujadz/"><i class="icon-instagram"></i></a>
+									</p>
 							</div>
 						</div>
 					</div>
