--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jasmine's profile page, welcome!</title>
+	<title>Welcome to Jasmine's profile page | JasmnC</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -255,7 +255,7 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>This is a Java application for an animal shelter admin system, our goal is to allowe stakeholders to collaborate through the app. my team used Swing API which </p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
