--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>This is a Java application for an animal shelter admin system, our goal is to allowe stakeholders to collaborate through the app. my team used Swing API which </p>
+									<p>This is a Java application for an animal shelter admin system, our goal is to allow stakeholders to collaborate through the app. My team used Swing APIs for UI layout and utilized DB4O as embedded database. </p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-12">
+					<!-- <div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
@@ -277,8 +277,8 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-12">
+					</div> -->
+					<!-- <div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
@@ -294,7 +294,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
@@ -339,7 +339,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
+									<a href="gallery.html" class="blog-img">
 										<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
@@ -348,7 +348,7 @@
 									</a>
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
+										<h2><a href="gallery.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
 								</div>
@@ -357,7 +357,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
+									<a href="gallery.html" class="blog-img">
 										<img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
@@ -366,7 +366,7 @@
 									</a>
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
+										<h2><a href="gallery.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
 								</div>
@@ -375,7 +375,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
+									<a href="gallery.html" class="blog-img">
 										<img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
@@ -384,64 +384,9 @@
 									</a>
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
+										<h2><a href="gallery.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div id="colorlib-testimony">
-			<div class="container">
-				<div class="row text-center">
-					<h2 class="bold">Endourses</h2>
-				</div>
-				<div class="row">
-					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Endoursements</span>
-						<h2>They Said</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="rotate">
-							<h2 class="heading">Says</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row animate-box">
-					<div class="owl-carousel">
-						<div class="item">
-							<div class="col-md-12 text-center">
-								<div class="testimony">
-									<blockquote>
-										<p>"I'm your best friend."</p>
-										<span> &mdash; Philips Yao</span>
-									</blockquote>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="col-md-12 text-center">
-								<div class="testimony">
-									<blockquote>
-										<p>"Jasmine has a clear personality, she overcome the difficulties and she's definatly a go-getter."</p>
-										<span> &mdash; Josie my co-op advisor</span>
-									</blockquote>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="col-md-12 text-center">
-								<div class="testimony">
-									<blockquote>
-										<p>"I will still love you."</p>
-										<span> &mdash; mom</span>
-									</blockquote>
 								</div>
 							</div>
 						</div>
@@ -460,9 +405,8 @@
 						</div>
 						<div class="col-md-4 col-pb-sm">
 							<div class="col-md-10">
-								<h2>Chill, I won't bite.</h2>
-								<p>Feel free to find me at</p>
-								<p><a href="#">chen.jasm@northeastern.edu</a></p>
+								<h3>Chill, I won't bite.</h3>
+								<p>Feel free to find me at : </p>
 								<p class="colorlib-social-icons">
 									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
 									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
