--- a/about.html
+++ b/about.html
@@ -202,6 +202,60 @@
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
+					<h2 class="bold">Endourses</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
+						<span>Endoursements</span>
+						<h2>They Said</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="rotate">
+							<h2 class="heading">Says</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row animate-box">
+					<div class="owl-carousel">
+						<div class="item">
+							<div class="col-md-12 text-center">
+								<div class="testimony">
+									<blockquote>
+										<p>"I'm your best friend."</p>
+										<span> &mdash; Philips Yao</span>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="col-md-12 text-center">
+								<div class="testimony">
+									<blockquote>
+										<p>"Jasmine has a clear personality, she overcome the difficulties and she's definatly a go-getter."</p>
+										<span> &mdash; Josie my co-op advisor</span>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="col-md-12 text-center">
+								<div class="testimony">
+									<blockquote>
+										<p>"I will still love you."</p>
+										<span> &mdash; mom</span>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- <div id="colorlib-testimony">
+			<div class="container">
+				<div class="row text-center">
 					<h2 class="bold">Testimonies</h2>
 				</div>
 				<div class="row">
@@ -252,59 +306,25 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
+		</div> -->
 		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-pb-sm">
 							<div class="row">
-								<div class="col-md-10">
-									<h2>Let's Talk</h2>
-									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
-									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
-										<a href="#"><i class="icon-googleplus"></i></a>
-										<a href="#"><i class="icon-dribbble2"></i></a>
+							</div>
+						</div>
+						<div class="col-md-4 col-pb-sm">
+							<div class="col-md-10">
+								<h2>Chill, I won't bite.</h2>
+								<p>Feel free to find me at : </p>
+								<p class="colorlib-social-icons">
+									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
+									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
+									<a href="https://github.com/JasmnC"><i class="icon-github"></i></a>
+									<a href="https://www.instagram.com/yuujadz/"><i class="icon-instagram"></i></a>
 									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
-							<h2>Latest Blog</h2>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
-								<div class="desc">
-									<span>February 15, 2018</span>
-									<h3><a href="#">Art Gallery in Japan</a></h3>
-								</div>
-							</div>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-2.jpg);"></a>
-								<div class="desc">
-									<span>February 9, 2018</span>
-									<h3><a href="#">A Japanese Constellation</a></h3>
-								</div>
-							</div>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-3.jpg);"></a>
-								<div class="desc">
-									<span>February 15, 2018</span>
-									<h3><a href="#">Road Trip</a></h3>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
-							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
-							<div class="subscribe text-center">
-								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
-									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
-								</div>
 							</div>
 						</div>
 					</div>
@@ -312,7 +332,7 @@
 						<div class="col-md-12 text-center">
 							<p>
 								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">JasmnC</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
@@ -321,6 +341,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</footer>
 	
+
+
 	</div>
 
 	<!-- jQuery -->
