--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>jz</span><span>mn</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -127,46 +127,47 @@
 								<div class="row">
 									<div class="col-md-12">
 										<div class="rotate">
-											<h2 class="heading">Services</h2>
+											<h2 class="heading">Thechnical Skills</h2>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
+											<h3>1 - Programming Languages</h3>
 											<ul>
-												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
-											</ul>
-										</div>
-										<div class="services animate-box">
-											<h3>3 - Front End Development</h3>
-											<ul>
+												<li>JAVA</li>
+												<li>Python</li>
+												<li>C / C++</li>
 												<li>HTML / CSS</li>
-												<li>JS &amp; Jquery Startup</li>
-												<li>WordPress</li>
-												<li>Jomla</li>
+											</ul>
+										</div>
+										<div class="services animate-box">
+											<h3>3 - Database Design</h3>
+											<ul>
+												<li>MySQL</li>
+												<li>MongoDB</li>
+												<li>DB4O</li>
+												<!-- <li>Jomla</li> -->
 											</ul>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>2 - Illustration</h3>
+											<h3>2 - Skills</h3>
 											<ul>
-												<li>Editorial</li>
-												<li>Narrative</li>
-												<li>Motion Graphics</li>
-												<li>Animation</li>
-												<li>Visual Effects</li>
+												<li>Linux</li>
+												<li>Embedded software</li>
+												<li>Gits</li>
+												<li>QA testing</li>
+												<li>TCP/IP protocols</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
+											<h3>4 - Communications </h3>
 											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>JIRA</li>
+												<li>Confluence</li>
+												<li>MS Office</li>
+												<li>Figma</li>
 											</ul>
 										</div>
 									</div>
@@ -193,7 +194,7 @@
 				</div>
 				<div class="row">
 			      <div class="col-md-3 col-sm-6 text-center">
-			      	<h2 class="progress-head">Graphic Design</h2>
+			      	<h2 class="progress-head">Application Development</h2>
 		            <div class="progress blue">
 		                <span class="progress-left">
 		                    <span class="progress-bar"></span>
@@ -201,12 +202,12 @@
 		                <span class="progress-right">
 		                    <span class="progress-bar"></span>
 		                </span>
-		                <div class="progress-value">100%</div>
+		                <div class="progress-value">85%</div>
 		            </div>
 		         </div>
 			 
 		         <div class="col-md-3 col-sm-6 text-center">
-		         	<h2 class="progress-head">Illustration</h2>
+		         	<h2 class="progress-head">Web Development</h2>
 		            <div class="progress yellow">
 		                <span class="progress-left">
 		                    <span class="progress-bar"></span>
@@ -219,7 +220,7 @@
 		         </div>
 
 		         <div class="col-md-3 col-sm-6 text-center">
-		         	<h2 class="progress-head">Front-End Development</h2>
+		         	<h2 class="progress-head">Data Structure and Algorithms</h2>
 		            <div class="progress pink">
 		                <span class="progress-left">
 		                    <span class="progress-bar"></span>
@@ -227,12 +228,12 @@
 		                <span class="progress-right">
 		                    <span class="progress-bar"></span>
 		                </span>
-		                <div class="progress-value">75%</div>
+		                <div class="progress-value">70%</div>
 		            </div>
 		         </div>
 
 		         <div class="col-md-3 col-sm-6 text-center">
-		         	<h2 class="progress-head">Web Marketing</h2>
+		         	<h2 class="progress-head">Communications</h2>
 		            <div class="progress green">
 		                <span class="progress-left">
 		                    <span class="progress-bar"></span>
